# asurada_robotics

./: .gitignore  README.md  ocam.yaml
Adv robot/: Human-robot interaction.tex  Technical Report.tex  root.tex
devel/: .catkin  .rosinstall  setup.sh
libuvc_ros/libuvc_camera/launch/: ost.yaml
src/: listener.py  test_yolo.py
src/libuvc_ros/libuvc_camera/launch/: camera.yaml  uvccam.launch
src/pololupub/: CMakeLists.txt  package.xml
src/pololupub/src/: pololupub.py
src/servo_pid/: CMakeLists.txt  package.xml
src/servo_pid/launch/: asurada.launch  asuradamt.launch
src/servo_pid/scripts/: planner.py  state_machine.py
src/state_estimate/: CMakeLists.txt  package.xml
src/state_estimate/scripts/: .transform.py.swp  maestro.py  state_publisher.py  transform.py
src/stop_sign/: CMakeLists.txt  package.xml
src/stop_sign/launch/: stop_sign.launch
src/stop_sign/src/: detect_stop.py  fetch_frames_ocam.py  listen_stop.py  pub_stop.py  test_network.py
src/velocity_control/: CMakeLists.txt  package.xml
src/velocity_control/launch/: vcon.launch
src/velocity_control/scripts/: velocity_control.py
src/yolo/: publish_video.py  test_yolo.py
