<?xml version="1.0"?>
<package format="2">
  <name>state_estimate</name>
  <version>0.1.0</version>
  <description>The state_estimate package</description>

  <maintainer email="asurada@odroid.edu">odroid</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
